--- a/.github/workflows/process.yml
+++ b/.github/workflows/process.yml
@@ -1,12 +1,13 @@
-name: Process Emails
+name: Email Automation
 
 on:
   schedule:
     - cron: '*/5 * * * *'  # Runs every 5 minutes
-  workflow_dispatch: 
+  workflow_dispatch:       # Manual trigger
+  repository_dispatch:     # External service trigger
 
 jobs:
-  process-emails:
+  run-script:
     runs-on: ubuntu-latest
 
     steps:
@@ -21,17 +22,17 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install imaplib2 gspread oauth2client google-api-python-client schedule
+        pip install -r requirements.txt
+        pip install google-api-python-client gspread oauth2client
 
-    - name: Decrypt and write credentials
-      run: |
-        echo "${{ secrets.GOOGLE_CREDENTIALS_JSON }}" > credentials.json
+    - name: Create credentials file
+      run: echo "${{ secrets.CREDENTIALS_JSON }}" > credentials.json
 
-    - name: Set environment variables
-      run: |
-        echo "EMAIL_USERNAME=${{ secrets.EMAIL_USERNAME }}" >> $GITHUB_ENV
-        echo "EMAIL_PASSWORD=${{ secrets.EMAIL_PASSWORD }}" >> $GITHUB_ENV
-
-    - name: Run email processor
-      run: |
-        python project.py
+    - name: Run script
+      env:
+        EMAIL_USERNAME: ${{ secrets.EMAIL_USERNAME }}
+        EMAIL_PASSWORD: ${{ secrets.EMAIL_PASSWORD }}
+        CREDENTIALS_PATH: ./credentials.json
+        SPREADSHEET_URL: ${{ secrets.SPREADSHEET_URL }}
+        DRIVE_FOLDER_ID: ${{ secrets.DRIVE_FOLDER_ID }}
+      run: python project.py
