--- a/.github/workflows/process.yml
+++ b/.github/workflows/process.yml
@@ -26,7 +26,9 @@ jobs:
 
     - name: Create credentials file
       run: |
-        echo "${{ secrets.CREDENTIALS_JSON }}" > credentials.json
+        echo "${{ secrets.CREDENTIALS_JSON }}" | jq . > credentials.json
+        ls -l credentials.json  # List file to verify creation
+        cat credentials.json    # Print file contents for verification (omit in production for security)
       shell: bash
 
     - name: Run script
@@ -36,4 +38,21 @@ jobs:
         CREDENTIALS_PATH: ./credentials.json
         SPREADSHEET_URL: ${{ secrets.SPREADSHEET_URL }}
         DRIVE_FOLDER_ID: ${{ secrets.DRIVE_FOLDER_ID }}
-      run: python project.py
+      run: |
+        python project.py
+      continue-on-error: false  # Set to true to allow the workflow to continue even if the script fails
+
+    - name: Archive logs
+      if: failure()  # Only run if previous steps failed
+      run: |
+        mkdir -p logs
+        cp project.log logs/  # Assuming your script logs to project.log
+        tar -czf logs.tar.gz logs/
+      shell: bash
+
+    - name: Upload logs as artifact
+      if: failure()  # Only upload if previous steps failed
+      uses: actions/upload-artifact@v3
+      with:
+        name: logs
+        path: logs.tar.gz
