--- a/.github/workflows/process.yml
+++ b/.github/workflows/process.yml
@@ -17,7 +17,7 @@ jobs:
     - name: Set up Python
       uses: actions/setup-python@v2
       with:
-        python-version: '3.x'
+        python-version: '3.12'  # Specify the Python version explicitly
 
     - name: Install dependencies
       run: |
@@ -27,8 +27,11 @@ jobs:
     - name: Create credentials file
       run: |
         echo "${{ secrets.CREDENTIALS_JSON }}" > credentials.json
-        ls -l credentials.json  # List file to verify creation
-        head -n 20 credentials.json  # Print the first 20 lines for verification
+      shell: bash
+
+    - name: Debug credentials file
+      run: |
+        cat credentials.json
       shell: bash
 
     - name: Run script
@@ -39,19 +42,3 @@ jobs:
         SPREADSHEET_URL: ${{ secrets.SPREADSHEET_URL }}
         DRIVE_FOLDER_ID: ${{ secrets.DRIVE_FOLDER_ID }}
       run: python project.py
-      continue-on-error: false  # Set to true to allow the workflow to continue even if the script fails
-
-    - name: Archive logs
-      if: failure()  # Only run if previous steps failed
-      run: |
-        mkdir -p logs
-        cp project.log logs/  # Assuming your script logs to project.log
-        tar -czf logs.tar.gz logs/
-      shell: bash
-
-    - name: Upload logs as artifact
-      if: failure()  # Only upload if previous steps failed
-      uses: actions/upload-artifact@v3
-      with:
-        name: logs
-        path: logs.tar.gz
