--- a/.github/workflows/process.yml
+++ b/.github/workflows/process.yml
@@ -3,8 +3,14 @@ name: Email Automation
 on:
   schedule:
     - cron: '*/5 * * * *'  # Runs every 5 minutes
-  workflow_dispatch:       # Manual trigger
+  workflow_dispatch:       # Manual trigger or external trigger
+    inputs:
+      event_type:
+        description: 'Event type for the workflow_dispatch trigger'
+        required: true
+        default: 'manual-trigger'
   repository_dispatch:     # External service trigger
+    types: [trigger-event]     # Must match the event type used in the dispatch request
 
 jobs:
   run-script:
@@ -39,5 +45,3 @@ jobs:
 
     - name: Clean up credentials
       run: rm credentials.json
-
-
