--- a/.github/workflows/process.yml
+++ b/.github/workflows/process.yml
@@ -2,7 +2,7 @@ name: Email Automation
 
 on:
   schedule:
-    - cron: '*/5 * * * *'  # Runs every 5 minutes
+    - cron: '*/1 * * * *'  # Runs every 1 minutes
   workflow_dispatch:       # Manual trigger or external trigger
     inputs:
       event_type:
@@ -10,7 +10,7 @@ on:
         required: true
         default: 'manual-trigger'
   repository_dispatch:     # External service trigger
-    types: [trigger-event]     # Must match the event type used in the dispatch request
+    types: [trigger-event]     
 
 jobs:
   run-script:
