--- a/.github/workflows/process.yml
+++ b/.github/workflows/process.yml
@@ -18,10 +18,10 @@ jobs:
 
     steps:
     - name: Checkout repository
-      uses: actions/checkout@v2
+      uses: actions/checkout@v3  # Updated to the latest version
 
     - name: Set up Python
-      uses: actions/setup-python@v2
+      uses: actions/setup-python@v3  # Updated to the latest version
       with:
         python-version: '3.8'  # Specify the exact version you need
 
@@ -41,6 +41,8 @@ jobs:
         CREDENTIALS_PATH: ./credentials.json
         SPREADSHEET_URL: ${{ secrets.SPREADSHEET_URL }}
         DRIVE_FOLDER_ID: ${{ secrets.DRIVE_FOLDER_ID }}
+        AZURE_ENDPOINT: ${{ secrets.AZURE_ENDPOINT }}
+        AZURE_KEY: ${{ secrets.AZURE_KEY }}
       run: python project.py
 
     - name: Clean up credentials
