--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 gspread
-oauth2client
-google-api-python-client
 google-auth
 google-auth-oauthlib
 google-auth-httplib2
+google-api-python-client
+oauth2client
+azure-ai-formrecognizer
